--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jest": "^26.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "6.8.0",
@@ -21,6 +23,7 @@
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.1",
+    "ts-jest": "^26.4.3",
     "ts-node-dev": "^1.0.0-pre.61",
     "typescript": "^4.0.2"
   }
