--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@pact-foundation/pact": "^9.13.0",
     "express": "^4.17.1",
     "jest": "^26.6.2"
   },
