--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,12 @@
               "ts": "never"
             }
         ],
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "argsIgnorePattern": "_"
+            }
+        ],
         "prettier/prettier": "error"
     },
     "settings": {
