--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     ],
     "rules": {
         "class-methods-use-this": "off",
+        "no-useless-constructor": "off",
         "import/extensions": [
             "error",
             "ignorePackages",
