--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "rules": {
         "class-methods-use-this": "off",
         "no-useless-constructor": "off",
+        "camelcase": "off",
         "import/extensions": [
             "error",
             "ignorePackages",
