chore: eslint off no-underscore-dangle

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "class-methods-use-this": "off",
         "no-useless-constructor": "off",
         "camelcase": "off",
+        "no-underscore-dangle": "off",
         "import/extensions": [
             "error",
             "ignorePackages",
