--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "pact:publisher": "ts-node-dev src/scripts/pact-publisher.ts"
   },
   "dependencies": {
     "@pact-foundation/pact": "^9.13.0",
