--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
     "test": "jest",
-    "pact:publisher": "ts-node-dev src/scripts/pact-publisher.ts"
+    "pact:publish": "ts-node-dev src/scripts/pact-publisher.ts"
   },
   "dependencies": {
     "@pact-foundation/pact": "^9.13.0",
